--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
-version: 2
+orbs:
+  architect: giantswarm/architect@0.4.5
+version: 2.1
 jobs:
   build:
     machine: true
@@ -15,3 +17,17 @@ jobs:
           if [ "${CIRCLE_BRANCH}" == "master" ]; then
             ./architect deploy
           fi
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build
+      # Push to Aliyun should execute without manual approval on master.
+      - architect/push-to-docker-legacy:
+          name: push-docker-kubectl-to-aliyun-master
+          image: "registry-intl.cn-shanghai.aliyuncs.com/giantswarm/docker-kubectl"
+          username_envar: "ALIYUN_USERNAME"
+          password_envar: "ALIYUN_PASSWORD"
+          requires:
+            - build
