--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,40 +1,38 @@
 version: 2.1
+
 orbs:
-  architect: giantswarm/architect@0.4.5
-
-jobs:
-  build:
-    machine: true
-    steps:
-    - checkout
-
-    - run:
-        name: Get architect binary
-        command: |
-          wget -q $(curl -sS -H "Authorization: token $RELEASE_TOKEN" https://api.github.com/repos/giantswarm/architect/releases/tags/v1.0.0 | grep browser_download_url | head -n 1 | cut -d '"' -f 4)
-          chmod +x ./architect
-          ./architect version
-
-    - run: ./architect build
+  architect: giantswarm/architect@0.9.0
 
 workflows:
-  version: 2
   build:
     jobs:
-      - build:
-          # Needed to trigger job also on git tag.
+      - architect/go-build:
+          name: go-build
+          binary: docker-kubectl
           filters:
             tags:
               only: /^v.*/
 
       - architect/push-to-docker:
-          name: push-docker-kubectl-to-quay
+          context: architect
+          name: push-to-quay
           image: "quay.io/giantswarm/docker-kubectl"
           username_envar: "QUAY_USERNAME"
           password_envar: "QUAY_PASSWORD"
           requires:
-            - build
-          # Needed to trigger job also on git tag.
+            - go-build
+          filters:
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-docker:
+          context: architect
+          name: push-to-aliyun-master
+          image: "registry-intl.cn-shanghai.aliyuncs.com/giantswarm/docker-kubectl"
+          username_envar: "ALIYUN_USERNAME"
+          password_envar: "ALIYUN_PASSWORD"
+          requires:
+            - go-build
           filters:
             branches:
               only: master
@@ -42,15 +40,15 @@ workflows:
               only: /^v.*/
 
       - architect/push-to-docker:
-          name: push-docker-kubectl-to-aliyun
+          context: architect
+          name: push-to-aliyun-pr
           image: "registry-intl.cn-shanghai.aliyuncs.com/giantswarm/docker-kubectl"
           username_envar: "ALIYUN_USERNAME"
           password_envar: "ALIYUN_PASSWORD"
           requires:
-            - build
-          # Needed to trigger job only on git tag.
+            - go-build
           filters:
             branches:
-              only: master
+              ignore: master
             tags:
-              only: /^v.*/
+              ignore: /^v.*/
