Add message in changelog on update
Signed-off-by: Marcus Noble <github@marcusnoble.co.uk>

--- a/.github/workflows/update_version.yaml
+++ b/.github/workflows/update_version.yaml
@@ -73,10 +73,14 @@ jobs:
             echo "No new version available" >&2
             echo "::set-output name=skip::true"
           fi
+      - name: Update Changelog
+        id: update_changelog
+        run: |
+          sed -i "s/## \[Unreleased\]/## [Unreleased]\n\n### Changed\n\n- Updated kubectl to ${{ needs.gather_facts.outputs.new_version }}" CHANGELOG.md
       - name: Commit changes
         if: ${{ steps.update_dockerfile.outputs.skip != 'true' }}
         run: |
-          file="Dockerfile"
+          file="Dockerfile CHANGELOG.md"
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add $file
