switch to Aliyun Container Registry to Enterprise

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ workflows:
       - architect/push-to-docker:
           context: architect
           name: push-to-aliyun
-          image: "registry-intl.cn-shanghai.aliyuncs.com/giantswarm/docker-kubectl"
+          image: "giantswarm-registry.cn-shanghai.cr.aliyuncs.com/giantswarm/docker-kubectl"
           username_envar: "ALIYUN_USERNAME"
           password_envar: "ALIYUN_PASSWORD"
           filters:
