--- a/.github/workflows/update_version.yaml
+++ b/.github/workflows/update_version.yaml
@@ -100,5 +100,5 @@ jobs:
       if: ${{ needs.gather_facts.outputs.skip != 'true' && needs.update_kubectl_version.outputs.skip != 'true' }}
       with:
         branch: "refs/heads/${{ needs.gather_facts.outputs.branch }}"
-      secrets:
-        TAYLORBOT_GITHUB_ACTION: "${{ secrets.TAYLORBOT_GITHUB_ACTION }}"
+      env:
+        GITHUB_TOKEN: "${{ secrets.TAYLORBOT_GITHUB_ACTION }}"
