Ignore default branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,4 +12,7 @@ workflows:
           filters:
             tags:
               only: /^v.*/
-
+            branches:
+              ignore:
+                - main
+                - master
