--- a/.github/workflows/update_version.yaml
+++ b/.github/workflows/update_version.yaml
@@ -21,7 +21,7 @@ jobs:
       base: ${{ steps.gather_facts.outputs.base }}
       new_version: ${{ steps.gather_facts.outputs.new_version }}
       branch: ${{ steps.gather_facts.outputs.branch }}
-      skip: ${{ steps.pr_exists.outputs.skip }}
+      skip: ${{ steps.check_existing.outputs.skip }}
     steps:
       - name: Gather facts
         id: gather_facts
@@ -31,21 +31,27 @@ jobs:
           base="$(echo $head | cut -d '#' -f 1)"
           base="${base#refs/heads/}" # Strip "refs/heads/" prefix.
           echo "base=\"$base\" head=\"$head\""
-          echo "::set-output name=base::${base}"
-          echo "::set-output name=head::${head}"
+          echo "base=${base}" >> $GITHUB_OUTPUT
+          echo "head=${head}" >> $GITHUB_OUTPUT
           new_version="$(curl -L -s https://dl.k8s.io/release/stable.txt)"
-          echo "::set-output name=new_version::${new_version}"
-          echo "::set-output name=branch::master#release#${new_version}"
-      - name: Check if PR exists
-        id: pr_exists
+          echo "new_version=${new_version}" >> $GITHUB_OUTPUT
+          echo "branch=master#release#${new_version}" >> $GITHUB_OUTPUT
+      - name: Check if branch or PR exists
+        id: check_existing
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         run: |
-          if gh pr view --repo ${{ github.repository }} "${{ steps.gather_facts.outputs.branch }}" | grep -i 'state:[[:space:]]*open' >/dev/null; then
-            gh pr view --repo ${{ github.repository }} "${{ steps.gather_facts.outputs.branch }}"
-            echo "::set-output name=skip::true"
+          branch="${{ steps.gather_facts.outputs.branch }}"
+          # Check if branch already exists on remote
+          if git ls-remote --heads "https://github.com/${{ github.repository }}.git" "${branch}" | grep -q .; then
+            echo "Branch ${branch} already exists on remote, skipping"
+            echo "skip=true" >> $GITHUB_OUTPUT
+          # Check if open PR exists for this branch
+          elif gh pr view --repo ${{ github.repository }} "${branch}" 2>/dev/null | grep -i 'state:[[:space:]]*open' >/dev/null; then
+            gh pr view --repo ${{ github.repository }} "${branch}"
+            echo "skip=true" >> $GITHUB_OUTPUT
           else
-            echo "::set-output name=skip::false"
+            echo "skip=false" >> $GITHUB_OUTPUT
           fi
 
   update_kubectl_version:
@@ -58,7 +64,7 @@ jobs:
       skip: ${{ steps.update_dockerfile.outputs.skip }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Update Dockerfile
         id: update_dockerfile
         run: |
@@ -67,11 +73,11 @@ jobs:
           version="$(sed -n 's/^ARG VERSION=\(.*\)$/\1/p' $file)"
           new_version="${{ needs.gather_facts.outputs.new_version }}"
           echo "version=\"$version\" new_version=\"$new_version\""
-          echo "::set-output name=new_version::${new_version}"
+          echo "new_version=${new_version}" >> $GITHUB_OUTPUT
           sed -Ei "s/^(ARG VERSION=).*$/\1${new_version}/" $file
           if git diff --exit-code $file ; then
             echo "No new version available" >&2
-            echo "::set-output name=skip::true"
+            echo "skip=true" >> $GITHUB_OUTPUT
           fi
       - name: Update Changelog
         id: update_changelog
